# pyicumessageformat

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  dev-requirements.txt  setup.cfg
pyicumessageformat/: constants.py  parser.py
test/: test_grammar.py
