[metadata]
name = pyicumessageformat
version = 0.3.0
author = Mike
author_email = sir@stendec.me
description = An unopinionated parser for ICU MessageFormat.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sirstendec/pyicumessageformat
project_urls =
    Bug Tracker = https://github.com/sirstendec/pyicumessageformat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
tests_require = pytest
python_requires = >= 3.6

[options.packages.find]
exclude =
    tests
